// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders components/flex/demo/basic.tsx correctly 1`] = `
<div
  class="ant-flex ant-flex-align-center ant-flex-justify-space-around"
>
  <button
    class="ant-btn ant-btn-default"
    type="button"
  >
    <span>
      Flex
    </span>
  </button>
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Button
    </span>
  </button>
  <span
    class="ant-upload-wrapper"
  >
    <div
      class="ant-upload ant-upload-select"
    >
      <span
        class="ant-upload"
        role="button"
        tabindex="0"
      >
        <input
          accept=""
          style="display:none"
          type="file"
        />
        <button
          class="ant-btn ant-btn-default"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <span
              aria-label="upload"
              class="anticon anticon-upload"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="upload"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M400 317.7h73.9V656c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V317.7H624c6.7 0 10.4-7.7 6.3-12.9L518.3 163a8 8 0 00-12.6 0l-112 141.7c-4.1 5.3-.4 13 6.3 13zM878 626h-60c-4.4 0-8 3.6-8 8v154H214V634c0-4.4-3.6-8-8-8h-60c-4.4 0-8 3.6-8 8v198c0 17.7 14.3 32 32 32h684c17.7 0 32-14.3 32-32V634c0-4.4-3.6-8-8-8z"
                />
              </svg>
            </span>
          </span>
          <span>
            Click to Upload
          </span>
        </button>
      </span>
    </div>
    <div
      class="ant-upload-list ant-upload-list-text"
    />
  </span>
  <button
    class="ant-btn ant-btn-default"
    type="button"
  >
    <span>
      Confirm
    </span>
  </button>
</div>
`;

exports[`renders components/flex/demo/gap.tsx correctly 1`] = `
Array [
  <div
    class="ant-radio-group ant-radio-group-outline"
  >
    <label
      class="ant-radio-wrapper ant-radio-wrapper-checked"
    >
      <span
        class="ant-radio ant-wave-target ant-radio-checked"
      >
        <input
          checked=""
          class="ant-radio-input"
          type="radio"
          value="small"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        small
      </span>
    </label>
    <label
      class="ant-radio-wrapper"
    >
      <span
        class="ant-radio ant-wave-target"
      >
        <input
          class="ant-radio-input"
          type="radio"
          value="middle"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        middle
      </span>
    </label>
    <label
      class="ant-radio-wrapper"
    >
      <span
        class="ant-radio ant-wave-target"
      >
        <input
          class="ant-radio-input"
          type="radio"
          value="large"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        large
      </span>
    </label>
  </div>,
  <br />,
  <br />,
  <div
    class="ant-flex ant-flex-gap-small"
  >
    <button
      class="ant-btn ant-btn-primary"
      type="button"
    >
      <span>
        Primary
      </span>
    </button>
    <button
      class="ant-btn ant-btn-default"
      type="button"
    >
      <span>
        Default
      </span>
    </button>
    <button
      class="ant-btn ant-btn-dashed"
      type="button"
    >
      <span>
        Dashed
      </span>
    </button>
    <button
      class="ant-btn ant-btn-link"
      type="button"
    >
      <span>
        Link
      </span>
    </button>
  </div>,
]
`;

exports[`renders components/flex/demo/gap-customize.tsx correctly 1`] = `
Array [
  <div
    class="ant-slider ant-slider-horizontal"
  >
    <div
      class="ant-slider-rail"
    />
    <div
      class="ant-slider-track"
      style="left:0%;width:4%"
    />
    <div
      class="ant-slider-step"
    />
    <div
      aria-disabled="false"
      aria-valuemax="200"
      aria-valuemin="0"
      aria-valuenow="8"
      class="ant-slider-handle"
      role="slider"
      style="left:4%;transform:translateX(-50%)"
      tabindex="0"
    />
  </div>,
  <br />,
  <br />,
  <div
    class="ant-flex"
    style="gap:8px"
  >
    <button
      class="ant-btn ant-btn-primary"
      type="button"
    >
      <span>
        Primary
      </span>
    </button>
    <button
      class="ant-btn ant-btn-default"
      type="button"
    >
      <span>
        Default
      </span>
    </button>
    <button
      class="ant-btn ant-btn-dashed"
      type="button"
    >
      <span>
        Dashed
      </span>
    </button>
    <button
      class="ant-btn ant-btn-link"
      type="button"
    >
      <span>
        Link
      </span>
    </button>
  </div>,
]
`;

exports[`renders components/flex/demo/vertical.tsx correctly 1`] = `
<div
  class="ant-flex ant-flex-direction-column"
>
  <div
    class="ant-card ant-card-bordered ant-card-hoverable ant-card-small"
    style="margin:10px"
  >
    <div
      class="ant-card-body"
    >
      <p>
        Card content
      </p>
      <p>
        Card content
      </p>
      <p>
        Card content
      </p>
    </div>
  </div>
  <div
    class="ant-card ant-card-bordered ant-card-hoverable ant-card-small"
    style="margin:10px"
  >
    <div
      class="ant-card-body"
    >
      <p>
        Card content
      </p>
      <p>
        Card content
      </p>
      <p>
        Card content
      </p>
    </div>
  </div>
  <div
    class="ant-card ant-card-bordered ant-card-hoverable ant-card-small"
    style="margin:10px"
  >
    <div
      class="ant-card-body"
    >
      <p>
        Card content
      </p>
      <p>
        Card content
      </p>
      <p>
        Card content
      </p>
    </div>
  </div>
</div>
`;
